--- a/customer/package.json
+++ b/customer/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
+    "nats": "^2.28.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
